smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/list-invalid-member.smithy
// Parse error at line 5, column 3 near `foo`: Expected: '}', but found 'f' | Model
namespace com.foo

list MyList {
  foo: smithy.api#String,
}
